2005-12-30  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:

	Improve "gecko not found" message. Bug #319253.

2005-12-30  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-file-helpers.c: (ephy_file_helpers_init),
	(my_gdk_spawn_make_environment_for_screen),
	(make_spawn_environment_for_sn_context),
	(ephy_file_launch_application), (launch_desktop_item):

	Put a marker in the environment to detect when we launch ourself
	as a helper app. Fixes bug #324828.

2005-12-30  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c:

	Zoom on Ctrl-=, Ctrl-KP+, Ctrl-KP- too. Bug #105183.

2005-12-23  Christian Neumair  <chris@gnome-de.org>

	* src/ephy-session.c: (offser_to_resume):

	Always center dialog on screen. Bug #324896.

2005-12-20  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c:

	Show warning on mixed content in the tooltip. Bug #321508.

2005-12-19  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/Makefile.am:
	* embed/ephy-adblock-manager.c:
	* embed/ephy-adblock-manager.h:
	* embed/ephy-embed-shell.c: (ephy_embed_shell_finalize):
	* embed/ephy-embed-shell.h:
	* embed/mozilla/EphyContentPolicy.cpp: (EphyContentPolicy::ShouldLoad):
	* lib/Makefile.am:
	* lib/ephy-adblock.h:
	* lib/ephy-adblock.c:
	* src/ephy-shell.c: (ephy_shell_get_extensions_manager):

	Add some code so ad blocking should be more easy. Based on the fact
	that Epiphany already has its own content policy component (EphyContentPolicy).
	The new design adds:
	- an interface, EphyAdBlock
	- a manager, EphyAdBlockManager, pointing to a blocker (possibly no one).

2005-12-16  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

	* lib/egg/egg-editable-toolbar.c: (configure_item_cursor):
	Use a gtk stock cursor (GDK_HAND2) instead of already removed image. 
	Fixes bug #324265.

2005-12-15  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/mozilla-embed-single: (impl_import):

	Fix a compile warning.
	
2005-12-14  Christian Persch  <chpe@cvs.gnome.org>
