@@ -1,5 +1,12 @@
 2005-12-30  Christian Persch  <chpe@cvs.gnome.org>
 
+	* plugins/desktop-file/Makefile.am:
+	
+	Add include subdirs for broken distros. Bug #321841.
+	Add plugins.symbols to EXTRA_DIST.
+
+2005-12-30  Christian Persch  <chpe@cvs.gnome.org>
+
 	* m4/gecko.m4:
 
 	Improve "gecko not found" message. Bug #319253.
